google-clon finish

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google</title>
     <script src="https://kit.fontawesome.com/79f69451e9.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" href="https://www.google.com/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="shortcut icon" href="https://www.google.com/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
@@ -33,7 +33,7 @@
                 <li class="menu-perfil">
                     <a href="#">
                         <img src="https://lh3.googleusercontent.com/ogw/AAEL6siMsJlFgpTHm8SkNqUcEjVFx1xxLRR1wzI2syZBqA=s32-c-mo"
-                            alt="">
+                            alt="" />
                     </a>
                 </li>
             </ul>
@@ -44,7 +44,7 @@
         <section class="main-logo">
             <img alt="Google" height="92"
                 src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png"
-                width="272">
+                width="272" />
         </section>
         <section class="main-input">
             <div class="main-input-container">
@@ -55,7 +55,7 @@
                         </path>
                     </svg>
                 </span>
-                <input type="text">
+                <input type="text" />
                 <a class="micro-icon" href="#">
                     <svg focusable="false" viewBox="0 0 192 192" xmlns="http://www.w3.org/2000/svg">
                         <rect fill="none" height="192" width="192"></rect>
@@ -87,9 +87,30 @@
     <section class="lenguaje lenguaje-1">
         <div class="lenguaje-spam">
             <span>Ofrecido por Google en:</span>
-            <a href="https://www.google.com/setprefs?sig=0_NZl96ojpEgwr699F4SmcKFKTeQ8%3D&amp;hl=es-419&amp;source=homepage&amp;sa=X&amp;ved=0ahUKEwiq8Y_E_az9AhWUspUCHd6ODXMQ2ZgBCA8">Español (Latinoamérica)</a>
+            <a href="https://www.google.com/setprefs?sig=0_NZl96ojpEgwr699F4SmcKFKTeQ8%3D&amp;hl=es-419&amp;source=homepage&amp;sa=X&amp;ved=0ahUKEwiq8Y_E_az9AhWUspUCHd6ODXMQ2ZgBCA8">Español(Latinoamérica)</a>
         </div>
-    </section>c
+    </section>
+
+    <footer>
+        <div class="footer">
+            <div class="footer_country">
+                <p>Paraguay</p>
+            </div>
+            <div class="footer_nav">
+                <div class="nav_left">
+                    <a href="#">Sobre Google</a>
+                    <a href="#">Publicidad</a>
+                    <a href="#">Negocios</a>
+                    <a href="#">Como funciona la Búsqueda</a>
+                </div>
+                <div class="nav_right">
+                    <a href="#">Privacidad</a>
+                    <a href="#">Condiciones</a>
+                    <a href="#">Preferencias</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
